reorganized Notebook and script

--- a/Notebook/Compare_v2.ipynb
+++ b/Notebook/Compare_v2.ipynb
@@ -1,36 +1,50 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import Package"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensorflow Version is 2.0.0\n",
-      "Keras Version is 2.2.4-tf\n",
+      "Tensorflow Version is 2.4.1\n",
+      "Keras Version is 2.4.0\n",
       "1 Physical GPUs, 1 Logical GPU\n"
      ]
     }
    ],
    "source": [
+    "# basic python package\n",
     "import importlib\n",
     "import numpy as np\n",
-    "import CR_ML_Class as CR\n",
+    "\n",
+    "# python ploting packages\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.ticker import MaxNLocator\n",
     "from matplotlib.colors import ListedColormap, LinearSegmentedColormap, BoundaryNorm\n",
     "from matplotlib.collections import LineCollection\n",
     "from matplotlib import cm\n",
     "\n",
+    "\n",
+    "# self-define classes\n",
+    "from script import CR_ML_Class as CR\n",
+    "\n",
+    "# tensorflow\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential, load_model\n",
     "print(\"Tensorflow Version is {}\".format(tf.__version__))\n",
     "print(\"Keras Version is {}\".format(tf.keras.__version__))\n",
     "\n",
-    "\n",
+    "# limit GPU memory\n",
     "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
     "# if gpus:\n",
     "#   # Restrict TensorFlow to only use the first GPU\n",
@@ -47,15 +61,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load Trained Modle\n",
+    "- trained by the data without noise within 6 $\\sigma$ bands (Mock Data)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
@@ -93,13 +115,13 @@
     }
    ],
    "source": [
-    "model_wo_noise = load_model(\"./MODEL/CR_ML_without_noise_6sigma.h5\")\n",
+    "model_wo_noise = load_model(\"../Model/CR_ML_without_noise_6sigma.h5\")\n",
     "model_wo_noise.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -114,37 +136,40 @@
    ],
    "source": [
     "importlib.reload(CR)\n",
-    "para_0_0 = np.load(\"./Numpy_mock_data/parameter_0.npy\")\n",
-    "para_0_1 = np.load(\"./Numpy_mock_data/new_parameter_0.npy\")\n",
-    "origin_data_0 = np.load(\"./Numpy_mock_data/data_0.npy\")\n",
+    "\n",
+    "mock_data_path = \"../Data/Numpy_mock_data/\"\n",
+    "\n",
+    "para_0_0 = np.load(mock_data_path + \"parameter_0.npy\")\n",
+    "para_0_1 = np.load(mock_data_path + \"new_parameter_0.npy\")\n",
+    "origin_data_0 = np.load(mock_data_path + \"data_0.npy\")\n",
     "mock_0 = CR.Mock_Data_PreProcessing(para_0_0, para_0_1, origin_data_0)\n",
     "print(\"There are {} data \".format(len(mock_0.new_parameter)))\n",
-    "chi_0 = np.load(\"./Numpy_mock_data/new_chi_0.npy\")\n",
+    "chi_0 = np.load(mock_data_path + \"new_chi_0.npy\")\n",
     "\n",
-    "para_1_0 = np.load(\"./Numpy_mock_data/parameter_1.npy\")\n",
-    "para_1_1 = np.load(\"./Numpy_mock_data/new_parameter_1.npy\")\n",
-    "origin_data_1 = np.load(\"./Numpy_mock_data/data_1.npy\")\n",
+    "para_1_0 = np.load(mock_data_path + \"parameter_1.npy\")\n",
+    "para_1_1 = np.load(mock_data_path + \"new_parameter_1.npy\")\n",
+    "origin_data_1 = np.load(mock_data_path + \"data_1.npy\")\n",
     "mock_1 = CR.Mock_Data_PreProcessing(para_1_0, para_1_1, origin_data_1)\n",
-    "chi_1 = np.load(\"./Numpy_mock_data/new_chi_1.npy\")\n",
+    "chi_1 = np.load(mock_data_path + \"new_chi_1.npy\")\n",
     "\n",
-    "parameter_2_0 =  np.load(\"./Numpy_mock_data/parameter_2.npy\")\n",
-    "parameter_2_1 = np.load(\"./Numpy_mock_data/new_parameter_2.npy\")\n",
-    "origin_data_2 = np.load(\"./Numpy_mock_data/data_2.npy\")\n",
+    "parameter_2_0 =  np.load(mock_data_path + \"parameter_2.npy\")\n",
+    "parameter_2_1 = np.load(mock_data_path + \"new_parameter_2.npy\")\n",
+    "origin_data_2 = np.load(mock_data_path + \"data_2.npy\")\n",
     "mock_2 = CR.Mock_Data_PreProcessing(parameter_2_0, parameter_2_1, origin_data_2)\n",
-    "chi_2 = np.load(\"./Numpy_mock_data/new_chi_2.npy\")\n",
+    "chi_2 = np.load(mock_data_path + \"new_chi_2.npy\")\n",
     "\n",
     "\n",
-    "parameter_3_0 =  np.load(\"./Numpy_mock_data/parameter_3.npy\")\n",
-    "parameter_3_1 = np.load(\"./Numpy_mock_data/new_parameter_3.npy\")\n",
-    "origin_data_3 = np.load(\"./Numpy_mock_data/data_3.npy\")\n",
+    "parameter_3_0 =  np.load(mock_data_path + \"parameter_3.npy\")\n",
+    "parameter_3_1 = np.load(mock_data_path + \"new_parameter_3.npy\")\n",
+    "origin_data_3 = np.load(mock_data_path + \"data_3.npy\")\n",
     "mock_3 = CR.Mock_Data_PreProcessing(parameter_3_0, parameter_3_1, origin_data_3)\n",
-    "chi_3 = np.load(\"./Numpy_mock_data/new_chi_3.npy\")\n",
+    "chi_3 = np.load(mock_data_path + \"new_chi_3.npy\")\n",
     "\n",
-    "parameter_4_0 =  np.load(\"./Numpy_mock_data/parameter_4.npy\")\n",
-    "parameter_4_1 = np.load(\"./Numpy_mock_data/new_parameter_4.npy\")\n",
-    "origin_data_4 = np.load(\"./Numpy_mock_data/data_4.npy\")\n",
+    "parameter_4_0 =  np.load(mock_data_path + \"parameter_4.npy\")\n",
+    "parameter_4_1 = np.load(mock_data_path + \"new_parameter_4.npy\")\n",
+    "origin_data_4 = np.load(mock_data_path + \"data_4.npy\")\n",
     "mock_4 = CR.Mock_Data_PreProcessing(parameter_4_0, parameter_4_1, origin_data_4)\n",
-    "chi_4 = np.load(\"./Numpy_mock_data/new_chi_4.npy\")\n",
+    "chi_4 = np.load(mock_data_path + \"new_chi_4.npy\")\n",
     "\n",
     "parameter = np.concatenate((mock_0.new_parameter,mock_1.new_parameter))\n",
     "data = np.concatenate((mock_0.data,mock_1.data))\n",
@@ -171,6 +196,13 @@
     "\n",
     "print(\"minium chi:\", min(chi))\n",
     "print(\"There are {} data \".format(parameter.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Split Data into Different CL regions"
    ]
   },
   {
@@ -210,18 +242,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Load Pseudodata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../Model/return4_wo_sele_1.npy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-4724163c6a1a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m \u001b[0minpack_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../Model/return4_wo_sele_1.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m \u001b[0mtmp_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../Model/return4_wo_sele_2.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    414\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    415\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 416\u001b[0;31m             \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menter_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    417\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    418\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../Model/return4_wo_sele_1.npy'"
+     ]
+    }
+   ],
    "source": [
     "importlib.reload(CR)\n",
     "\n",
-    "pseudoparameter_4 = np.load(\"./Pseudodata/normalfactor_15000_wo_noise_0729.npy\")\n",
-    "pseudodata_4 = np.load(\"./Pseudodata/pseudo_15000_wo_noise_0729.npy\")\n",
+    "pseudo_data_path = \"../Data/Pseudodata/\"\n",
     "\n",
-    "# pseudoparameter_4 = np.load(\"./Pseudodata/normalfactor_15000_w_noise_0729.npy\")\n",
-    "# pseudodata_4 = np.load(\"./Pseudodata/pseudo_15000_w_noise_0729.npy\")\n",
+    "pseudoparameter_4 = np.load(pseudo_data_path + \"normalfactor_15000_wo_noise_0729.npy\")\n",
+    "pseudodata_4 = np.load(pseudo_data_path + \"pseudo_15000_wo_noise_0729.npy\")\n",
+    "\n",
+    "# pseudoparameter_4 = np.load(data_path + \"normalfactor_15000_w_noise_0729.npy\")\n",
+    "# pseudodata_4 = np.load(data_path + \"Pseudodata/pseudo_15000_w_noise_0729.npy\")\n",
     "\n",
     "\n",
     "# chi = CCS.Calculate_Chi_Square(parameter,data)\n",
@@ -231,22 +285,25 @@
     "\n",
     "# chi_index = np.argsort(chi_0[:15000])\n",
     "\n",
-    "para_4_0 = np.load(\"./Numpy_mock_data/parameter_4.npy\")\n",
-    "para_4_1 = np.load(\"./Numpy_mock_data/new_parameter_4.npy\")\n",
-    "origin_data_4 = np.load(\"./Numpy_mock_data/data_4.npy\")\n",
+    "mock_data_path = \"../Data/Numpy_mock_data/\"\n",
+    "\n",
+    "para_4_0 = np.load(mock_data_path + \"parameter_4.npy\")\n",
+    "para_4_1 = np.load(mock_data_path + \"new_parameter_4.npy\")\n",
+    "origin_data_4 = np.load(mock_data_path + \"data_4.npy\")\n",
     "# para_4_1[:,5] = np.load(\"../Numpy_mock_data/Ap_5_4.npy\")*5\n",
     "mock_4 = CR.Mock_Data_PreProcessing(para_4_0, para_4_1, origin_data_4)\n",
-    "chi_4 = np.load(\"./Numpy_mock_data/new_chi_4.npy\")\n",
+    "chi_4 = np.load(mock_data_path + \"new_chi_4.npy\")\n",
     "# chi_4 = CR.Calculate_Chi_Square(data=mock_4.data, usedata = True).chi_square()\n",
     "chi_index = np.argsort(chi_4[:15000])\n",
     "\n",
     "\n",
     "\n",
-    "inpack_1 = np.load(\"./MODEL/return4_wo_sele_1.npy\")\n",
-    "tmp_1 = np.load(\"./MODEL/return4_wo_sele_2.npy\")\n",
     "\n",
-    "inpack_2 = np.load(\"./MODEL/return4_w_sele_1.npy\")\n",
-    "tmp_2 = np.load(\"./MODEL/return4_w_sele_2.npy\")\n",
+    "inpack_1 = np.load(\"../Model/return4_wo_sele_1.npy\")\n",
+    "tmp_1 = np.load(\"../Model/return4_wo_sele_2.npy\")\n",
+    "\n",
+    "inpack_2 = np.load(\"../Model/return4_w_sele_1.npy\")\n",
+    "tmp_2 = np.load(\"../Model/return4_w_sele_2.npy\")\n",
     "\n",
     "chi_index_wo_noise = np.argsort(chi_4[:15000][inpack_1][tmp_1])\n",
     "chi_index_w_noise = np.argsort(chi_4[15000:][inpack_2][tmp_2])#+15000\n"
@@ -1119,9 +1176,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
