--- a/Notebook/PseudoDataFactory.ipynb
+++ b/Notebook/PseudoDataFactory.ipynb
@@ -6,30 +6,49 @@
    "source": [
     "# Loading Package\n",
     "\n",
-    "### \"Mock_Data_Processing_for_Training\": Data processing\n",
-    "### \"ML_Training\": training in 6 $\\sigma$ region\n",
-    "### \"Calculate_Chi_Square\": calculate $\\chi^2$\n",
-    "### \"Select_Sample\": select data in 1, 2, 3, 6 $\\sigma$ region\n",
-    "### \"Create_Pseudodata\": create pseudodata "
+    "- \"Mock_Data_Processing_for_Training\": Data processing\n",
+    "- \"ML_Training\": training in 6 $\\sigma$ region\n",
+    "- \"Calculate_Chi_Square\": calculate $\\chi^2$\n",
+    "- \"Select_Sample\": select data in 1, 2, 3, 6 $\\sigma$ region\n",
+    "- \"Create_Pseudodata\": create pseudodata "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensorflow Version is 2.4.1\n",
+      "Keras Version is 2.4.0\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import absolute_import, division, print_function, unicode_literals\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy import interpolate\n",
-    "import pandas as pd\n",
+    "# basic python package\n",
     "import importlib\n",
+    "import numpy as np\n",
     "\n",
-    "# import tensorflow as tf\n",
+    "# python ploting packages\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.ticker import MaxNLocator\n",
+    "from matplotlib.colors import ListedColormap, LinearSegmentedColormap, BoundaryNorm\n",
+    "from matplotlib.collections import LineCollection\n",
+    "from matplotlib import cm\n",
+    "\n",
+    "\n",
+    "# self-define classes\n",
+    "from script import CR_ML_Class as CR\n",
+    "\n",
+    "# tensorflow\n",
+    "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential, load_model\n",
-    "# import Create_Pseudodata as CPDATA\n",
-    "import CR_ML_Class as CR"
+    "print(\"Tensorflow Version is {}\".format(tf.__version__))\n",
+    "print(\"Keras Version is {}\".format(tf.keras.__version__))"
    ]
   },
   {
@@ -86,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -95,43 +114,49 @@
      "text": [
       "There are 223365 data \n",
       "minium chi: 347.33360999999996\n",
-      "There are 374445 data \n"
+      "There are 374445 data \n",
+      "CPU times: user 2.75 s, sys: 5.87 s, total: 8.62 s\n",
+      "Wall time: 8.66 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "importlib.reload(CR)\n",
-    "para_0_0 = np.load(\"./Numpy_mock_data/parameter_0.npy\")\n",
-    "para_0_1 = np.load(\"./Numpy_mock_data/new_parameter_0.npy\")\n",
-    "origin_data_0 = np.load(\"./Numpy_mock_data/data_0.npy\")\n",
+    "\n",
+    "mock_data_path = \"../Data/Numpy_mock_data/\"\n",
+    "\n",
+    "para_0_0 = np.load(mock_data_path + \"parameter_0.npy\")\n",
+    "para_0_1 = np.load(mock_data_path + \"new_parameter_0.npy\")\n",
+    "origin_data_0 = np.load(mock_data_path + \"data_0.npy\")\n",
     "mock_0 = CR.Mock_Data_PreProcessing(para_0_0, para_0_1, origin_data_0)\n",
     "print(\"There are {} data \".format(len(mock_0.new_parameter)))\n",
-    "chi_0 = np.load(\"./Numpy_mock_data/new_chi_0.npy\")\n",
+    "chi_0 = np.load(mock_data_path + \"new_chi_0.npy\")\n",
     "\n",
-    "para_1_0 = np.load(\"./Numpy_mock_data/parameter_1.npy\")\n",
-    "para_1_1 = np.load(\"./Numpy_mock_data/new_parameter_1.npy\")\n",
-    "origin_data_1 = np.load(\"./Numpy_mock_data/data_1.npy\")\n",
+    "para_1_0 = np.load(mock_data_path + \"parameter_1.npy\")\n",
+    "para_1_1 = np.load(mock_data_path + \"new_parameter_1.npy\")\n",
+    "origin_data_1 = np.load(mock_data_path + \"data_1.npy\")\n",
     "mock_1 = CR.Mock_Data_PreProcessing(para_1_0, para_1_1, origin_data_1)\n",
-    "chi_1 = np.load(\"./Numpy_mock_data/new_chi_1.npy\")\n",
+    "chi_1 = np.load(mock_data_path + \"new_chi_1.npy\")\n",
     "\n",
-    "parameter_2_0 =  np.load(\"./Numpy_mock_data/parameter_2.npy\")\n",
-    "parameter_2_1 = np.load(\"./Numpy_mock_data/new_parameter_2.npy\")\n",
-    "origin_data_2 = np.load(\"./Numpy_mock_data/data_2.npy\")\n",
+    "parameter_2_0 =  np.load(mock_data_path + \"parameter_2.npy\")\n",
+    "parameter_2_1 = np.load(mock_data_path + \"new_parameter_2.npy\")\n",
+    "origin_data_2 = np.load(mock_data_path + \"data_2.npy\")\n",
     "mock_2 = CR.Mock_Data_PreProcessing(parameter_2_0, parameter_2_1, origin_data_2)\n",
-    "chi_2 = np.load(\"./Numpy_mock_data/new_chi_2.npy\")\n",
+    "chi_2 = np.load(mock_data_path + \"new_chi_2.npy\")\n",
     "\n",
     "\n",
-    "parameter_3_0 =  np.load(\"./Numpy_mock_data/parameter_3.npy\")\n",
-    "parameter_3_1 = np.load(\"./Numpy_mock_data/new_parameter_3.npy\")\n",
-    "origin_data_3 = np.load(\"./Numpy_mock_data/data_3.npy\")\n",
+    "parameter_3_0 =  np.load(mock_data_path + \"parameter_3.npy\")\n",
+    "parameter_3_1 = np.load(mock_data_path + \"new_parameter_3.npy\")\n",
+    "origin_data_3 = np.load(mock_data_path + \"data_3.npy\")\n",
     "mock_3 = CR.Mock_Data_PreProcessing(parameter_3_0, parameter_3_1, origin_data_3)\n",
-    "chi_3 = np.load(\"./Numpy_mock_data/new_chi_3.npy\")\n",
+    "chi_3 = np.load(mock_data_path + \"new_chi_3.npy\")\n",
     "\n",
-    "parameter_4_0 =  np.load(\"./Numpy_mock_data/parameter_4.npy\")\n",
-    "parameter_4_1 = np.load(\"./Numpy_mock_data/new_parameter_4.npy\")\n",
-    "origin_data_4 = np.load(\"./Numpy_mock_data/data_4.npy\")\n",
+    "parameter_4_0 =  np.load(mock_data_path + \"parameter_4.npy\")\n",
+    "parameter_4_1 = np.load(mock_data_path + \"new_parameter_4.npy\")\n",
+    "origin_data_4 = np.load(mock_data_path + \"data_4.npy\")\n",
     "mock_4 = CR.Mock_Data_PreProcessing(parameter_4_0, parameter_4_1, origin_data_4)\n",
-    "chi_4 = np.load(\"./Numpy_mock_data/new_chi_4.npy\")\n",
+    "chi_4 = np.load(mock_data_path + \"new_chi_4.npy\")\n",
     "\n",
     "parameter = np.concatenate((mock_0.new_parameter,mock_1.new_parameter))\n",
     "data = np.concatenate((mock_0.data,mock_1.data))\n",
@@ -172,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -180,21 +205,24 @@
      "output_type": "stream",
      "text": [
       "There are 2226 data in the 1 \\sigma region.\n",
-      "\u001b[3;33mTime consumption : 0.0032 min\u001b[0;m\n",
+      "\u001b[3;33mTime consumption : 0.0051 min\u001b[0;m\n",
       "There are 6600 data in the 2 \\sigma region.\n",
-      "\u001b[3;33mTime consumption : 0.0039 min\u001b[0;m\n",
+      "\u001b[3;33mTime consumption : 0.0042 min\u001b[0;m\n",
       "There are 13970 data in the 3 \\sigma region.\n",
-      "\u001b[3;33mTime consumption : 0.0052 min\u001b[0;m\n",
+      "\u001b[3;33mTime consumption : 0.0055 min\u001b[0;m\n",
       "There are 24700 data in the 4 \\sigma region.\n",
-      "\u001b[3;33mTime consumption : 0.0066 min\u001b[0;m\n",
+      "\u001b[3;33mTime consumption : 0.0069 min\u001b[0;m\n",
       "There are 39055 data in the 5 \\sigma region.\n",
-      "\u001b[3;33mTime consumption : 0.0085 min\u001b[0;m\n",
+      "\u001b[3;33mTime consumption : 0.0089 min\u001b[0;m\n",
       "There are 57252 data in the 6 \\sigma region.\n",
-      "\u001b[3;33mTime consumption : 0.0124 min\u001b[0;m\n"
+      "\u001b[3;33mTime consumption : 0.0127 min\u001b[0;m\n",
+      "CPU times: user 2.41 s, sys: 264 ms, total: 2.68 s\n",
+      "Wall time: 2.67 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "importlib.reload(CR)\n",
     "chi_para, chi_data, chi_sele = parameter,data,chi #mock_0.new_parameter[:], mock_0.data[:], chi_0[:]\n",
     "\n",
@@ -208,25 +236,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 933 µs, sys: 943 µs, total: 1.88 ms\n",
+      "Wall time: 1.15 ms\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "para_3_sigma_ = para_3_sigma[np.where(para_3_sigma[:,2] < 5)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([4.9425, 4.6925, 4.8311, ..., 4.5826, 4.6002, 4.9323])"
+       "array([4.9425, 4.6925, 4.8311, ..., 4.5569, 4.9678, 4.892 ])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -245,12 +283,15 @@
      "output_type": "stream",
      "text": [
       "19.9974\n",
-      "0.0\n",
-      "333452\n"
+      "2.9847\n",
+      "1228\n",
+      "CPU times: user 11.3 ms, sys: 246 µs, total: 11.5 ms\n",
+      "Wall time: 10.8 ms\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "print(max(para_3_sigma[:,2] ))\n",
     "print(min(para_3_sigma[:,2] ))\n",
     "print(len(para_3_sigma[np.where(para_3_sigma[:,2] < 5)]))"
@@ -271,6 +312,7 @@
     }
    ],
    "source": [
+    "%%time\n",
     "pseudo_data =  np.load(\"./For6sigma/pseudo_data_2000.npy\")\n",
     "pseudo_para =  np.load(\"./For6sigma/pseudo_normalfactor_2000.npy\")\n",
     "\n",
@@ -1722,7 +1764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
