--- a/Notebook/PseudoDataFactory.ipynb
+++ b/Notebook/PseudoDataFactory.ipynb
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -307,29 +307,34 @@
      "output_type": "stream",
      "text": [
       "(57252, 84, 6)\n",
-      "(57252, 14)\n"
+      "(57252, 14)\n",
+      "CPU times: user 338 ms, sys: 1.8 s, total: 2.14 s\n",
+      "Wall time: 2.53 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "pseudo_data =  np.load(\"./For6sigma/pseudo_data_2000.npy\")\n",
-    "pseudo_para =  np.load(\"./For6sigma/pseudo_normalfactor_2000.npy\")\n",
+    "\n",
+    "For6sigma_data_path = \"../Data/For6sigma/\"\n",
+    "\n",
+    "pseudo_data =  np.load(For6sigma_data_path + \"pseudo_data_2000.npy\")\n",
+    "pseudo_para =  np.load(For6sigma_data_path + \"pseudo_normalfactor_2000.npy\")\n",
     "\n",
     "number_index = 2000\n",
     "\n",
     "for i in range(28):\n",
     "    number_index += 2000\n",
-    "    pseudo_data_tmp =  np.load(\"./For6sigma/pseudo_data_\"+str(number_index)+\".npy\")\n",
-    "    pseudo_para_tmp =  np.load(\"./For6sigma/pseudo_normalfactor_\"+str(number_index)+\".npy\")\n",
+    "    pseudo_data_tmp =  np.load(For6sigma_data_path + \"pseudo_data_\"+str(number_index)+\".npy\")\n",
+    "    pseudo_para_tmp =  np.load(For6sigma_data_path + \"pseudo_normalfactor_\"+str(number_index)+\".npy\")\n",
     " \n",
     "    pseudo_data = np.concatenate((pseudo_data,pseudo_data_tmp))\n",
     "    pseudo_para = np.concatenate((pseudo_para,pseudo_para_tmp))\n",
     "    \n",
     "print(pseudo_data.shape)\n",
     "print(pseudo_para.shape)\n",
-    "np.save(\"./Pseudodata/pseudo_data_6sigma.npy\",pseudo_data)\n",
-    "np.save(\"./Pseudodata/pseudo_para_6sigma.npy\",pseudo_para)"
+    "# np.save(\"./Pseudodata/pseudo_data_6sigma.npy\",pseudo_data)\n",
+    "# np.save(\"./Pseudodata/pseudo_para_6sigma.npy\",pseudo_para)"
    ]
   },
   {
@@ -376,47 +381,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0. 1. 2. 3. 4.]\n",
-      "[5. 6. 7. 8. 9.]\n",
-      "16\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = np.linspace(0,20,21)\n",
-    "print(a[0:5])\n",
-    "print(a[5:10])\n",
-    "print(len(a[0:30]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(1):\n",
-    "    print(i)\n",
-    "# print(len(pseudoexp[0]),len(pseudoexp[1]))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -445,25 +409,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "94\n",
-      "Tue Jan 26 13:26:04 2021\n",
-      "\u001b[3;33mTime consumption : 0.0048 min\u001b[0;m\n",
+      "57252\n",
+      "Wed Aug 04 09:46:42 2021\n",
+      "\u001b[3;33mTime consumption : 1.6572 min\u001b[0;m\n",
       "minium chi: 347.33360999999996\n",
-      "1 of pseudodata in 1 sigma region\n",
-      "9 of pseudodata in 2 sigma region\n",
-      "23 of pseudodata in 3 sigma region\n"
+      "2224 of pseudodata in 1 sigma region\n",
+      "6621 of pseudodata in 2 sigma region\n",
+      "13990 of pseudodata in 3 sigma region\n",
+      "CPU times: user 1min 39s, sys: 281 ms, total: 1min 39s\n",
+      "Wall time: 1min 39s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "importlib.reload(CR)\n",
+    "\n",
+    "pseudodata = pseudo_data\n",
+    "normalfactor = pseudo_para\n",
+    "\n",
     "# chichi = CCS.Calculate_Chi_Square(normalfactor, pseudodata)\n",
     "chichi = CR.Calculate_Chi_Square(data=pseudodata,usedata=True)\n",
     "print(chichi.len)\n",
@@ -485,15 +456,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(48912, 14)\n",
-      "(48912, 84, 6)\n"
+      "(57252, 14)\n",
+      "(57252, 84, 6)\n"
      ]
     }
    ],
@@ -538,10 +509,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -577,23 +545,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fri Aug 14 00:33:27 2020\n",
-      "\u001b[3;33mTime consumption : 7.3607 min\u001b[0;m\n"
+      "CPU times: user 2.55 ms, sys: 185 ms, total: 188 ms\n",
+      "Wall time: 187 ms\n"
      ]
     }
    ],
    "source": [
-    "normalfactor = np.load(\"./Pseudodata/parameter_3sigma_0729.npy\")\n",
-    "pseudodata = np.load(\"./Pseudodata/pseudodata_3sigma_0729.npy\")\n",
+    "%%time\n",
+    "normalfactor = np.load(\"../Data/Pseudodata/parameter_3sigma_0729.npy\")\n",
+    "pseudodata = np.load(\"../Data/Pseudodata/pseudodata_3sigma_0729.npy\")\n",
     "\n",
-    "pseudodata_3sigma = CCS.Calculate_Chi_Square(normalfactor,pseudodata)\n",
+    "pseudodata_3sigma = CR.Calculate_Chi_Square(normalfactor,pseudodata)\n",
+    "\n",
     "\n",
     "# normalfactor = np.load(\"./Pseudodata/normalfactor_2500_1.npy\")\n",
     "# pseudodata = np.load(\"./Pseudodata/pseudo_2500_1.npy\")\n",
@@ -606,19 +576,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([378.86169, 373.5733 , 383.81046, 385.21848, 367.3893 , 377.98376,\n",
-       "       373.14783, 352.555  , 373.01993, 362.44561])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'Calculate_Chi_Square' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-afe10f88f469>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpseudodata_3sigma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'Calculate_Chi_Square' object is not subscriptable"
+     ]
     }
    ],
    "source": [
