--- a/Notebook/PseudoDataFactory.ipynb
+++ b/Notebook/PseudoDataFactory.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -32,6 +32,9 @@
     "# basic python package\n",
     "import importlib\n",
     "import numpy as np\n",
+    "import logging\n",
+    "importlib.reload(logging)\n",
+    "logging.basicConfig(level = logging.INFO)\n",
     "\n",
     "# python ploting packages\n",
     "import matplotlib.pyplot as plt\n",
@@ -43,6 +46,8 @@
     "\n",
     "# self-define classes\n",
     "from script import CR_ML_Class as CR\n",
+    "from script import load_mock_data as LD\n",
+    "\n",
     "\n",
     "# tensorflow\n",
     "import tensorflow as tf\n",
@@ -105,84 +110,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Now loading...\n",
+      "INFO:root:1/5\n",
+      "INFO:root:There are 223365 data \n",
+      "INFO:root:2/5\n",
+      "INFO:root:There are 86080 data \n",
+      "INFO:root:3/5\n",
+      "INFO:root:There are 5000 data \n",
+      "INFO:root:4/5\n",
+      "INFO:root:There are 30000 data \n",
+      "INFO:root:5/5\n",
+      "INFO:root:There are 30000 data \n",
+      "INFO:root:Finish\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 223365 data \n",
-      "minium chi: 347.33360999999996\n",
-      "There are 374445 data \n",
-      "CPU times: user 2.75 s, sys: 5.87 s, total: 8.62 s\n",
-      "Wall time: 8.66 s\n"
+      "CPU times: user 2.51 s, sys: 5.37 s, total: 7.89 s\n",
+      "Wall time: 8.41 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "importlib.reload(CR)\n",
+    "importlib.reload(LD)\n",
     "\n",
-    "mock_data_path = \"../Data/Numpy_mock_data/\"\n",
+    "origin_para = [\"parameter_0.npy\",\"parameter_1.npy\",\"parameter_2.npy\",\"parameter_3.npy\",\"parameter_4.npy\"]\n",
+    "new_para = [\"new_parameter_0.npy\",\"new_parameter_1.npy\",\"new_parameter_2.npy\",\"new_parameter_3.npy\",\"new_parameter_4.npy\"]\n",
+    "mock_data = [\"data_0.npy\",\"data_1.npy\",\"data_2.npy\",\"data_3.npy\",\"data_4.npy\"]\n",
+    "chi_square = [\"new_chi_0.npy\",\"new_chi_1.npy\",\"new_chi_2.npy\",\"new_chi_3.npy\",\"new_chi_4.npy\"]\n",
     "\n",
-    "para_0_0 = np.load(mock_data_path + \"parameter_0.npy\")\n",
-    "para_0_1 = np.load(mock_data_path + \"new_parameter_0.npy\")\n",
-    "origin_data_0 = np.load(mock_data_path + \"data_0.npy\")\n",
-    "mock_0 = CR.Mock_Data_PreProcessing(para_0_0, para_0_1, origin_data_0)\n",
-    "print(\"There are {} data \".format(len(mock_0.new_parameter)))\n",
-    "chi_0 = np.load(mock_data_path + \"new_chi_0.npy\")\n",
+    "load_data = LD.load_mock_data(origin_para = origin_para, new_para = new_para, mock_data = mock_data, chi_square = chi_square, mock_data_path=\"../Data/Numpy_mock_data/\")\n",
     "\n",
-    "para_1_0 = np.load(mock_data_path + \"parameter_1.npy\")\n",
-    "para_1_1 = np.load(mock_data_path + \"new_parameter_1.npy\")\n",
-    "origin_data_1 = np.load(mock_data_path + \"data_1.npy\")\n",
-    "mock_1 = CR.Mock_Data_PreProcessing(para_1_0, para_1_1, origin_data_1)\n",
-    "chi_1 = np.load(mock_data_path + \"new_chi_1.npy\")\n",
-    "\n",
-    "parameter_2_0 =  np.load(mock_data_path + \"parameter_2.npy\")\n",
-    "parameter_2_1 = np.load(mock_data_path + \"new_parameter_2.npy\")\n",
-    "origin_data_2 = np.load(mock_data_path + \"data_2.npy\")\n",
-    "mock_2 = CR.Mock_Data_PreProcessing(parameter_2_0, parameter_2_1, origin_data_2)\n",
-    "chi_2 = np.load(mock_data_path + \"new_chi_2.npy\")\n",
-    "\n",
-    "\n",
-    "parameter_3_0 =  np.load(mock_data_path + \"parameter_3.npy\")\n",
-    "parameter_3_1 = np.load(mock_data_path + \"new_parameter_3.npy\")\n",
-    "origin_data_3 = np.load(mock_data_path + \"data_3.npy\")\n",
-    "mock_3 = CR.Mock_Data_PreProcessing(parameter_3_0, parameter_3_1, origin_data_3)\n",
-    "chi_3 = np.load(mock_data_path + \"new_chi_3.npy\")\n",
-    "\n",
-    "parameter_4_0 =  np.load(mock_data_path + \"parameter_4.npy\")\n",
-    "parameter_4_1 = np.load(mock_data_path + \"new_parameter_4.npy\")\n",
-    "origin_data_4 = np.load(mock_data_path + \"data_4.npy\")\n",
-    "mock_4 = CR.Mock_Data_PreProcessing(parameter_4_0, parameter_4_1, origin_data_4)\n",
-    "chi_4 = np.load(mock_data_path + \"new_chi_4.npy\")\n",
-    "\n",
-    "parameter = np.concatenate((mock_0.new_parameter,mock_1.new_parameter))\n",
-    "data = np.concatenate((mock_0.data,mock_1.data))\n",
-    "chi = np.concatenate((chi_0,chi_1))\n",
-    "\n",
-    "parameter = np.concatenate((parameter,mock_2.new_parameter))\n",
-    "data = np.concatenate((data,mock_2.data))\n",
-    "chi = np.concatenate((chi,chi_2))\n",
-    "\n",
-    "parameter = np.concatenate((parameter,mock_3.new_parameter))\n",
-    "data = np.concatenate((data,mock_3.data))\n",
-    "chi = np.concatenate((chi,chi_3))\n",
-    "\n",
-    "parameter = np.concatenate((parameter,mock_4.new_parameter))\n",
-    "data = np.concatenate((data,mock_4.data))\n",
-    "chi = np.concatenate((chi,chi_4))\n",
-    "\n",
-    "\n",
-    "# parameter = mock_4.new_parameter[:15000]\n",
-    "# data = mock_4.data[:15000]\n",
-    "# chi =chi_4[:15000]\n",
-    "\n",
-    "chi_sort = np.argsort(chi)\n",
-    "\n",
-    "print(\"minium chi:\", min(chi))\n",
-    "print(\"There are {} data \".format(parameter.shape[0]))"
+    "parameter, data, chisq = load_data.parameter, load_data.data, load_data.chisq"
    ]
   },
   {
