--- a/Notebook/PseudoDataFactory.ipynb
+++ b/Notebook/PseudoDataFactory.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -32,6 +32,7 @@
     "# basic python package\n",
     "import importlib\n",
     "import numpy as np\n",
+    "import time\n",
     "import logging\n",
     "importlib.reload(logging)\n",
     "logging.basicConfig(level = logging.INFO)\n",
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -135,8 +136,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.51 s, sys: 5.37 s, total: 7.89 s\n",
-      "Wall time: 8.41 s\n"
+      "CPU times: user 2.59 s, sys: 5.83 s, total: 8.42 s\n",
+      "Wall time: 8.95 s\n"
      ]
     }
    ],
