--- a/Notebook/PseudoDataFactory.ipynb
+++ b/Notebook/PseudoDataFactory.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -119,16 +119,8 @@
      "output_type": "stream",
      "text": [
       "INFO:root:Now loading...\n",
-      "INFO:root:1/5\n",
+      "INFO:root:1/1\n",
       "INFO:root:There are 223365 data \n",
-      "INFO:root:2/5\n",
-      "INFO:root:There are 86080 data \n",
-      "INFO:root:3/5\n",
-      "INFO:root:There are 5000 data \n",
-      "INFO:root:4/5\n",
-      "INFO:root:There are 30000 data \n",
-      "INFO:root:5/5\n",
-      "INFO:root:There are 30000 data \n",
       "INFO:root:Finish\n"
      ]
     },
@@ -136,8 +128,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.59 s, sys: 5.83 s, total: 8.42 s\n",
-      "Wall time: 8.95 s\n"
+      "CPU times: user 1.17 s, sys: 2.24 s, total: 3.41 s\n",
+      "Wall time: 3.92 s\n"
      ]
     }
    ],
@@ -145,14 +137,14 @@
     "%%time\n",
     "importlib.reload(LD)\n",
     "\n",
-    "origin_para = [\"parameter_0.npy\",\"parameter_1.npy\",\"parameter_2.npy\",\"parameter_3.npy\",\"parameter_4.npy\"]\n",
-    "new_para = [\"new_parameter_0.npy\",\"new_parameter_1.npy\",\"new_parameter_2.npy\",\"new_parameter_3.npy\",\"new_parameter_4.npy\"]\n",
-    "mock_data = [\"data_0.npy\",\"data_1.npy\",\"data_2.npy\",\"data_3.npy\",\"data_4.npy\"]\n",
-    "chi_square = [\"new_chi_0.npy\",\"new_chi_1.npy\",\"new_chi_2.npy\",\"new_chi_3.npy\",\"new_chi_4.npy\"]\n",
+    "origin_para = [\"parameter_0.npy\"]#,\"parameter_1.npy\",\"parameter_2.npy\",\"parameter_3.npy\",\"parameter_4.npy\"]\n",
+    "new_para = [\"new_parameter_0.npy\"]#,\"new_parameter_1.npy\",\"new_parameter_2.npy\",\"new_parameter_3.npy\",\"new_parameter_4.npy\"]\n",
+    "mock_data = [\"data_0.npy\"]#,\"data_1.npy\",\"data_2.npy\",\"data_3.npy\",\"data_4.npy\"]\n",
+    "chi_square = [\"new_chi_0.npy\"]#,\"new_chi_1.npy\",\"new_chi_2.npy\",\"new_chi_3.npy\",\"new_chi_4.npy\"]\n",
     "\n",
     "load_data = LD.load_mock_data(origin_para = origin_para, new_para = new_para, mock_data = mock_data, chi_square = chi_square, mock_data_path=\"../Data/Numpy_mock_data/\")\n",
     "\n",
-    "parameter, data, chisq = load_data.parameter, load_data.data, load_data.chisq"
+    "parameter, data, chi = load_data.parameter, load_data.data, load_data.chisq"
    ]
   },
   {
@@ -167,27 +159,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:There are 2226 data in the 1 \\sigma region.\n",
+      "INFO:root:\u001b[3;33mTime consumption : 0.0038 min\u001b[0;m\n",
+      "INFO:root:There are 6600 data in the 2 \\sigma region.\n",
+      "INFO:root:\u001b[3;33mTime consumption : 0.0044 min\u001b[0;m\n",
+      "INFO:root:There are 13970 data in the 3 \\sigma region.\n",
+      "INFO:root:\u001b[3;33mTime consumption : 0.0055 min\u001b[0;m\n",
+      "INFO:root:There are 24700 data in the 4 \\sigma region.\n",
+      "INFO:root:\u001b[3;33mTime consumption : 0.0076 min\u001b[0;m\n",
+      "INFO:root:There are 39055 data in the 5 \\sigma region.\n",
+      "INFO:root:\u001b[3;33mTime consumption : 0.0096 min\u001b[0;m\n",
+      "INFO:root:There are 57252 data in the 6 \\sigma region.\n",
+      "INFO:root:\u001b[3;33mTime consumption : 0.0137 min\u001b[0;m\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 2226 data in the 1 \\sigma region.\n",
-      "\u001b[3;33mTime consumption : 0.0051 min\u001b[0;m\n",
-      "There are 6600 data in the 2 \\sigma region.\n",
-      "\u001b[3;33mTime consumption : 0.0042 min\u001b[0;m\n",
-      "There are 13970 data in the 3 \\sigma region.\n",
-      "\u001b[3;33mTime consumption : 0.0055 min\u001b[0;m\n",
-      "There are 24700 data in the 4 \\sigma region.\n",
-      "\u001b[3;33mTime consumption : 0.0069 min\u001b[0;m\n",
-      "There are 39055 data in the 5 \\sigma region.\n",
-      "\u001b[3;33mTime consumption : 0.0089 min\u001b[0;m\n",
-      "There are 57252 data in the 6 \\sigma region.\n",
-      "\u001b[3;33mTime consumption : 0.0127 min\u001b[0;m\n",
-      "CPU times: user 2.41 s, sys: 264 ms, total: 2.68 s\n",
-      "Wall time: 2.67 s\n"
+      "CPU times: user 2.4 s, sys: 309 ms, total: 2.71 s\n",
+      "Wall time: 2.7 s\n"
      ]
     }
    ],
@@ -213,8 +211,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 933 µs, sys: 943 µs, total: 1.88 ms\n",
-      "Wall time: 1.15 ms\n"
+      "CPU times: user 873 µs, sys: 3.83 ms, total: 4.7 ms\n",
+      "Wall time: 3.03 ms\n"
      ]
     }
    ],
@@ -269,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -278,8 +276,8 @@
      "text": [
       "(57252, 84, 6)\n",
       "(57252, 14)\n",
-      "CPU times: user 338 ms, sys: 1.8 s, total: 2.14 s\n",
-      "Wall time: 2.53 s\n"
+      "CPU times: user 391 ms, sys: 1.79 s, total: 2.18 s\n",
+      "Wall time: 2.82 s\n"
      ]
     }
    ],
@@ -319,34 +317,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Jan 28 16:15:07 2021\n",
-      "\u001b[3;33mTime for Search The Pack of Spectrum : 0.1748 min\u001b[0;m\n",
-      "\u001b[3;33mTime for Create Pseudodata : 0.3540 min\u001b[0;m\n",
-      "Pseudo Normal Factor\n",
-      "        Li     Be     O   \n",
-      "  #     2      2      2   \n",
-      " Max  1.1808 1.0053 1.0244\n",
-      " Min  1.1680 0.9951 1.0159\n",
-      " Ave. 1.1744 1.0002 1.0202\n",
-      "\u001b[3;33mTime for N_Li : 0.0061 min\u001b[0;m\n",
-      "\u001b[3;33mTime for Recorver_Spectrum : 0.0001 min\u001b[0;m\n",
-      "\u001b[3;33mTime for Recorver_Spectrum : 0.0001 min\u001b[0;m\n",
-      "\u001b[3;33mTime consumption : 0.5836 min\u001b[0;m\n"
+      "CPU times: user 657 µs, sys: 924 µs, total: 1.58 ms\n",
+      "Wall time: 1.3 ms\n"
      ]
     }
    ],
    "source": [
-    "# importlib.reload(CPDATA)\n",
-    "importlib.reload(CR)\n",
+    "%%time\n",
+    "total_data_divAp = np.zeros((data.shape[0], 84, 8))\n",
+    "for i in range(data.shape[0]):\n",
+    "    total_data_divAp[i,:,0] = (data[i,:,1]/parameter[i,11])/(data[i,:,4]/data[i,52,4]) # (Li/N_Li)/(C/C_109.5)\n",
+    "    total_data_divAp[i,:,1] = (data[i,:,2]/parameter[i,12])/(data[i,:,4]/data[i,52,4]) # (Be/N_Be)/(C/C_109.5)\n",
+    "    total_data_divAp[i,:,2] = data[i,:,3]/(data[i,:,4]/data[i,52,4]) # B/(C/C_109.5)\n",
+    "\n",
+    "    total_data_divAp[i,:,3] = (data[i,:,1]/parameter[i,11])/(data[i,:,5]/parameter[i,13]) # (Li/N_Li)/(O/N_O)\n",
+    "    total_data_divAp[i,:,4] = (data[i,:,2]/parameter[i,12])/(data[i,:,5]/parameter[i,13]) # (Be/N_Be)/(O/N_O)\n",
+    "    total_data_divAp[i,:,5] = data[i,:,3]/(data[i,:,5]/parameter[i,13]) # B/(O/N_O)\n",
+    "\n",
+    "    total_data_divAp[i,:,6] = data[i,:,4] # C\n",
+    "    total_data_divAp[i,:,7] = (data[i,:,5]/parameter[i,13])/(data[i,:,4]/data[i,52,4])  # (O/N_O)/(C/C_109.5)\n",
+    "    \n",
+    "    if i == 9:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (223365,84) (9,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-a499e9bb0ccd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m52\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (223365,84) (9,) "
+     ]
+    }
+   ],
+   "source": [
+    "(data[:,:,4]/data[:9,52,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_data_divAp_new = np.zeros((data.shape[0], 84, 8))\n",
+    "\n",
+    "total_data_divAp[0,:,0] = (data[0,:,1]/np.full(84,parameter[0,11]))/(data[0,:,4]/data[:9,52,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Thu Aug 05 02:50:03 2021\n",
+      "INFO:root:Experimental data are loading\n",
+      "INFO:root:\u001b[3;33mTime for Search The Pack of Spectrum : 0.1904 min\u001b[0;m\n",
+      "INFO:root:\u001b[3;33mTime for Create Pseudodata : 0.3661 min\u001b[0;m\n",
+      "INFO:root:Pseudo Normal Factor\n",
+      "INFO:root:        Li     Be     O   \n",
+      "INFO:root:  #     2      2      2   \n",
+      "INFO:root: Max  1.1810 1.0061 1.0239\n",
+      "INFO:root: Min  1.1680 0.9956 1.0159\n",
+      "INFO:root: Ave. 1.1745 1.0009 1.0199\n",
+      "INFO:root:\u001b[3;33mTime for N_Li : 0.0041 min\u001b[0;m\n",
+      "INFO:root:\u001b[3;33mTime for Recorver_Spectrum : 0.0001 min\u001b[0;m\n",
+      "INFO:root:\u001b[3;33mTime for Recorver_Spectrum : 0.0001 min\u001b[0;m\n",
+      "INFO:root:\u001b[3;33mTime consumption : 0.6060 min\u001b[0;m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 36.1 s, sys: 260 ms, total: 36.4 s\n",
+      "Wall time: 36.4 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from script import Create_Pseudodata as Create_Pseudodata\n",
+    "importlib.reload(Create_Pseudodata)\n",
     "# normalfactor, pseudodata = CPDATA.Create_Pseudodata(para_6_sigma,data_6_sigma,chi,100)\n",
-    "pseudoexp = CR.Create_Pseudodata(para_6_sigma,data_6_sigma,chi, LOW = 10 , HIGH = 100000 , number = 2, index=0).Create_Pseudodata()\n",
+    "pseudoexp = Create_Pseudodata.Create_Pseudodata(para_6_sigma,data_6_sigma,chi, LOW = 10 , HIGH = 100000 , number = 2, index=0).Create_Pseudodata()\n",
     "# normalfactor_2, pseudodata_2 = pseudoexp.normalfactor,  pseudoexp.pseudodata"
    ]
   },
